app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require refinery/formatting
 *= require refinery/theme
 *= require_self
 *= require foundation_and_overrides

 *= require_tree .
 */

html {
    background: image-url('background.jpg') #777 no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#page {
    background-color: #fff;
    padding-top: 1rem;
}

.copyright {
    color: #fff;
}

body.login {
    header {
        h1 {
            color: #fff;
        }
    }
}


/* HEADER */
a.social-media {
    display: inline-block;
    width: 3rem;
    height: 3rem;

    margin: 0.6rem 0.4rem 0;

    background-image: image-url('social-media.png');

    &.facebook {
        background-position: 0 0;
        &:hover { background-position: 0 -48px; }
    }
    &.twitter {
        background-position: -48px 0;
        &:hover { background-position: -48px -48px; }
    }
    &.instagram {
        background-position: -96px 0;
        &:hover { background-position: -96px -48px; }
    }
}


/* CONTENT */
section.page-part {
    padding: 0.5rem;
    margin: 0 0 1rem;

    -webkit-box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.75);
    -moz-box-shadow:    0px 0px 3px 0px rgba(50, 50, 50, 0.75);
    box-shadow:         0px 0px 3px 0px rgba(50, 50, 50, 0.75);

    .page-part-header {
        margin: -0.5rem -0.5rem 0.5rem -0.5rem;
        padding: 0.2rem;
        background-color: #ccc;
    }
}


/* Home */
.home-orbit {
    list-style: none;
    padding: 0;
    margin: 0;

    /* Makes sure that only the first slide is visible before the orbit is loaded */
    &:not(.orbit-slides-container) {
        li:not(:first-child) {
            display: none;
        }
    }
}

.orbit-timer {
    display: none;
}

.orbit-bullets-container {
    position: absolute;
    bottom: 0;
    z-index: 10;
    width: 100%;
}

ul.latest-news {
    list-style: none;
    margin: 0;
    padding: 0;

    li:not(:last-child) {
        border-bottom: 2px solid #ccc;
    }
}

.events {
    list-style: none;
    margin: 0;
    padding: 0;

    overflow: hidden;

    > li:not(:last-child) {
        border-bottom: 2px solid #ccc;
    }

    table {
        border: 0;
    }

    .event-date {
        width: 25%;
        vertical-align: middle;

        .event-day {
            display: block;
            font-size: 3rem;
            line-height: 1;
            color: #666;
        }

        .event-month {
            display: block;
            font-size: 1.5rem;
            font-weight: bold;
            color: #333;
        }
    }
    .event-description {
        width: 75%;
        vertical-align: middle;
    }
}


/* Filtering and Pagination on pages */
.filters {
    .active {
        font-weight: bold;
    }
}

.pages {
    .active {
        font-weight: bold;
    }
}


/* Employees */
.employees {

    .employee {
        height: 8rem;
        padding: 0.5rem;

        background-color: #eee;

        .profile-picture {
            float: left;
            margin-right: 0.5rem;

            width: 6rem;
            height: 6rem;
        }

        p {
            color: #666;
            margin: 0;
            font-size: 0.8rem;
        }
    }
}


/* Brands */
.brands {

    .brand {
        padding: 0.5rem;

        background-color: #eee;

        .logo {
            float: left;
            margin-right: 0.5rem;

            width: 6rem;
            height: 6rem;
        }

        p {
            color: #666;
            margin: 0;
            font-size: 0.8rem;
        }
    }
}


/* Calendar Widget */
.ui-datepicker-title {
    select {
        padding: 0;
        height: inherit;
    }
}


/* jQuery overrides */
.ui-button {
    padding: 0 !important;
    margin: 0 !important;

    &.ui-dialog-titlebar-close {
        font-size: 1px !important;
    }
}

.ui-autocomplete {
    z-index: 5000 !important;
}

